v2.5.2 Documentation improvements