@@ -5,11 +5,11 @@ import java.util.List;
 import java.util.Map;
 
 /**
- * These nodes represent the types of things we may encounter when parsing an HTML string, which
- * for our purposes is just the types in {@link ParseNodeType}.  Depending on the type,
- * different values will be filled out, but by coalescing them into this one class, it simplifies
- * our code.
+ * Represents the expected types of things we may encounter when parsing an HTML string, which
+ * for our purposes is {@link ParseNodeType}.
+ * <p>
  * See <a href="https://www.w3.org/TR/2011/WD-html-markup-20110113/syntax.html#syntax-elements">W3.org Elements</a>
+ * </p>
  */
 public record HtmlParseNode(ParseNodeType type,
                             TagInfo tagInfo,
@@ -19,8 +19,12 @@ public record HtmlParseNode(ParseNodeType type,
     public static final HtmlParseNode EMPTY = new HtmlParseNode(ParseNodeType.ELEMENT, TagInfo.EMPTY, List.of(), "EMPTY HTMLPARSENODE");
 
     /**
+     * Return a list of strings of the text content of the tree.
+     * <p>
      * This method traverses the tree from this node downwards,
-     * adding the text content as it goes.
+     * adding the text content as it goes. Its main purpose is to
+     * quickly render all the strings out of an HTML document at once.
+     * </p>
      */
     public List<String> print() {
         var myList = new ArrayList<String>();
@@ -38,9 +42,7 @@ public record HtmlParseNode(ParseNodeType type,
     }
 
     /**
-     * This searches for a single node in the HTML.  If it
-     * finds more than one match, it will throw an exception.
-     * If none are found, HtmlParseNode.EMPTY is returned.
+     * Return a list of {@link HtmlParseNode} nodes in the HTML that match provided attributes.
      */
     public List<HtmlParseNode> search(TagName tagName, Map<String, String> attributes) {
         var myList = new ArrayList<HtmlParseNode>();
@@ -58,12 +60,18 @@ public record HtmlParseNode(ParseNodeType type,
     }
 
     /**
-     * If the element you're looking at has just one inner
-     * content item, and it's a CHARACTERS element, return it.
+     * Return the inner text
+     * <p>
+     * If this element has only one inner
+     * content item, and it's a {@link ParseNodeType.CHARACTERS} element, return its text content.
+     * </p>
+     * <p>
+     *     Otherwise, return an empty string.
+     * </p>
      */
     public String innerText() {
-       if (innerContent.size() == 1 && innerContent.get(0).type == ParseNodeType.CHARACTERS) {
-           return innerContent.get(0).textContent;
+       if (innerContent.size() == 1 && innerContent.getFirst().type == ParseNodeType.CHARACTERS) {
+           return innerContent.getFirst().textContent;
        } else {
            return "";
        }
